Updates from Overleaf

--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -284,7 +284,7 @@ The naive solution is to average these scores.
 However, as shown in \autoref{fig:misFitMean} averaging may lead to severely biased estimates.
 \begin{figure}[!ht]
 	\centering
-	\includesvg[width=.8\textwidth]{misfitMean}
+	\includesvg[width=\textwidth]{misfitMean}
 	\caption{True item scores ($x$-axis) versus the sample mean across raters ($y$-axis).}
 	\label{fig:misFitMean}
 \end{figure}
