Updates from Overleaf

--- a/paper/CCT_with_data.tex
+++ b/paper/CCT_with_data.tex
@@ -285,10 +285,10 @@ However, as shown in \autoref{fig:misFitMean} averaging may lead to severely bia
 \begin{figure}[!ht]
 	\centering
 	\includesvg[width=\textwidth]{misfitMean}
-	\caption{True item scores ($x$-axis) versus the sample mean across raters ($y$-axis).}
+	\caption{True item scores ($x$-axis) versus the sample mean across raters ($y$-axis). The left panel shows a scenario where there is large heterogeneity among the raters, and the performance of the sample mean is poor. In the right panel the raters are homogeneous, and the performance of the sample mean is much better.}
 	\label{fig:misFitMean}
 \end{figure}
-\DB{\autoref{fig:misFitMean} is not convincing!}
+
 The average score disregards all additional information that is available.
 It ignores the individual differences between raters, for example, this assumes that all psychiatrists score hostility in the same way, and it ignores group differences among raters, for example, there is no difference in scores by psychiatrists as opposed to clinicians, or other staff members.
 In addition, the average ignores any additional information about the patient at hand, such as offense and diagnosis.
