Updates from Overleaf

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -18538,7 +18538,7 @@ pages = {352--362}
     title = {Handleiding en Methodologische Verantwoording HKT-R, Historisch, Klinische en Toekomstige--Revisie},
     author = {Marinus Spreen and Eddy Brand and {Ter Horst}, Paul and Stefan Bogaerts},
     year = {2014},
-    month = {nov},
+    month = {11},
     day = {23},
     language = "Dutch",
     publisher = "Dr. van Mesdag kliniek",
@@ -18622,13 +18622,6 @@ pages = {352--362}
   year={1950}
 }
 
-@inproceedings{plonsky2017psychological,
-  title={Psychological forest: Predicting human behavior},
-  author={Plonsky, Ori and Erev, Ido and Hazan, Tamir and Tennenholtz, Moshe},
-  booktitle={Thirty-first AAAI conference on artificial intelligence},
-  year={2017}
-}
-
 @Article{miceRpackage,
     title = {{mice}: Multivariate Imputation by Chained Equations in R},
     author = {Stef {van Buuren} and Karin Groothuis-Oudshoorn},
@@ -18653,4 +18646,23 @@ pages = {352--362}
   title={Diagnostic and statistical manual of mental disorders (2000)},
   author={American Psychiatry Association and others},
   journal={DSM-IV. 4th edition. Washington DC: American Psychiatric Association}
+}
+
+
+@article{schuringa2021treatment,
+  title={Treatment evaluation in forensic psychiatry. which one should be used: the clinical judgment or the instrument-based assessment of change?},
+  author={Schuringa, Erwin and Spreen, Marinus and Bogaerts, Stefan},
+  journal={International journal of offender therapy and comparative criminology},
+  pages={0306624X211023921},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{erdfelder2020cognitive,
+  title={Cognitive psychometrics: Recent contributions in honor of William H. Batchelder (1940-2018)},
+  author={Erdfelder, Edgar and Hu, Xiangen and Rouder, Jeffrey N and Wagenmakers, Eric-Jan},
+  journal={Journal of Mathematical Psychology},
+  volume={99},
+  year={2020},
+  publisher={Academic Press}
 }
